# can-socket

./: .cleanignore  .gitignore  Cargo.toml  FEATURES_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT_CONSOLIDATED.md  LICENSE  NAME_CHANGE_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  README.md  ROADMAP.md  RUST_TESTS.md  TESTS_ORGANIZATION.md  TYPESCRIPT_MIGRATION_REPORT.md  advanced-demo.ts  can-fd-demo.ts  copy-native.sh  exemple.js  index.js  index.ts  jest.config.js  migrate.sh  npm-scripts-analysis.md  package-lock.json  package.json  robust_neon_test.js  simple_neon_test.js  tsconfig.json
.github/: copilot-instructions.md
docs/: EVENT_GENERATOR_API.md  INDEX.md  TYPESCRIPT_API.md
examples/: README.md  advanced-can-demo.ts  can-filter-demo.ts  event-generator-demo.ts  exemple.js
scripts/: check-documentation-consistency.js  documentation-map.js  migrate-to-typescript.sh
src/: benchmarks.rs  exemple.ts  lib.rs  lib_backup.rs  lib_optimized.rs  main.ts  neon_optimization_benchmark.ts  socketcan.ts  socketcan_optimized.ts  socketcan_ultra_optimized.ts  test.ts  tests.rs  utils.ts
tests/: README.md  REORGANIZATION_SUMMARY.md  features.test.ts  index.js  main.test.ts  migrate.js  optimization-micro-benchmarks.ts  performance-optimization-benchmarks.ts  quick-test.js  run-tests-clean.js  socketcan.class.test.ts  socketcan.test.ts  test-basic-load.js  test-can-fd.js  test-can-filters.js  test-clean.js  test-error-frames.js  test-extended-ids.js  test-final-implementation.js  test-functional-linux.js  test-helpers.js  test-new-name.js  test-real-api.js  (+12 more)
(+45 files in other folders)
