[package]
name = "can-socket"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
optimized = []

[dependencies]
neon = { version = "1.1", features = ["napi-6"] }
thiserror = "2.0"
lazy_static = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
